@startuml

title __ENNEMIS's Class Diagram__\n

  namespace  {
    namespace om.company {
      namespace ennemis {
        class com.company.ennemis.Dragon {
            + Dragon()
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace ennemis {
        abstract class com.company.ennemis.Ennemi {
            - life : int
            - strength : int
            + Ennemi()
            + getLife()
            + getStrength()
            + interact()
            + setLife()
            + setStrength()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace ennemis {
        class com.company.ennemis.Gobelin {
            + Gobelin()
        }
      }
    }
  }
  

  namespace  {
    namespace om.company {
      namespace ennemis {
        class com.company.ennemis.Sorcier {
            + Sorcier()
        }
      }
    }
  }
  

  com.company.ennemis.Dragon -up-|> com.company.ennemis.Ennemi
  com.company.ennemis.Ennemi -up-|> com.company.Case
  com.company.ennemis.Gobelin -up-|> com.company.ennemis.Ennemi
  com.company.ennemis.Sorcier -up-|> com.company.ennemis.Ennemi


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
